# uibk_hpc_24

./: .clang-format  .gitignore  readme.md
lecture/: readme.md
proseminar/: job.sh  lcc3_tutorial.md  readme.md  submission_tutorial.md
proseminar/01/: readme.md
proseminar/02/: readme.md
proseminar/02/heat_stencil_1D/: Makefile  heat_stencil_1D_seq.c
proseminar/03/: readme.md
proseminar/04/: readme.md
proseminar/05/: readme.md
proseminar/05/code/: Makefile  example_1.c  example_2.c
proseminar/06/: README.md  particle.plt
proseminar/07/: readme.md
proseminar/08/: readme.md
proseminar/09/: readme.md
proseminar/10/: readme.md
proseminar/10/mandelbrot/: Makefile  mandelbrot_seq.c  stb_image_write.h
proseminar/11/: readme.md
proseminar/12/: readme.md
proseminar/12/heat_stencil_1d/: CMakeLists.txt  heat_stencil_1d.cpp
